--- a/css/style.css
+++ b/css/style.css
@@ -2134,10 +2134,15 @@ input[type=text] {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-top: 10px;
+  /*
+  margin-left: auto;
+  margin-right: auto;
+   margin-top: 5px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   */
 }
 
 .intro {
