--- a/applets/threejs/gravity/style.css
+++ b/applets/threejs/gravity/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
+
 html, body {
   margin: 0;
   padding: 0;
@@ -43,4 +45,31 @@ a:hover {
 /* selected link */
 a:active {
   color: #00cc99;
+}
+
+.expand-link {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.706);
+  color: white;
+  border-radius: 5px;
+  font-size: 1.2em;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.3em;
+  height: 1.3em;
+}
+
+.expand-link:hover {
+  background-color: darkgray;
+}
+
+@media (min-height: 350px) {
+  .expand-link {
+      display: none !important;
+  }
 }
